# animated_map

./: .gitignore  README.md  pyproject.toml
src/animated_map/: __init__.py  app.py
src/animated_map/static/css/: style.css
src/animated_map/static/js/: main.js
src/animated_map/templates/: index.html
