[project]
name = "animated-map"
version = "0.1.0"
description = "A Flask-based web application for visualizing animated streamflow data"
readme = "README.md"
authors = [
    { name = "Josh Cunningham", email = "josh.cu@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-compress>=1.15",
    "geopandas>=1.0.1",
    "netcdf4>=1.7.2",
    "werkzeug>=3.0.1",
    "xarray>=2024.7.0",
]

[project.scripts]
animated-map = "animated_map.app:main"
anim = "animated_map.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
